# Game-of-Greed

./: README.md  bots.py  pyproject.toml
game_of_greed/: banker.py  game.py  game_logic.py
tests/: flo.py  test_calculate_score.py
tests/version_2/: test_sim.txt  test_sim_basic.py
tests/version_3/: test_get_scorers.py  test_sim_advanced.py
